# siemens-gtest-workflow

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: calculator.cpp  main.cpp
tests/: test_calculator.cpp
